Updated team.html.erb thrice

--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -45,7 +45,7 @@
     <div class="nitk-header">
         <div class="container">
           <header class="d-flex justify-content-center py-3">
-            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="header.png"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="app/assets/images/header.png"></a></li>
           </header>
         </div>
       </div>
@@ -86,7 +86,7 @@
             
             <div class="col-lg-6 mt-4">
                 <div class="member d-flex align-items-start">
-                    <div class="teampic"><img src="mr-br-chandravarkar.jpg" class="img-fluid" alt=""></div>
+                    <div class="teampic"><img src="app/assets/images/mr-br-chandravarkar.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                         <h4>Dr. B R Chandavarkar</h4>
                         <span>Associate Professor</span> <!-- Corrected spelling here -->
@@ -109,7 +109,7 @@
             
             <div class="col-lg-6 mt-4">
                 <div class="member d-flex align-items-start">
-                    <div class="teampic"><img src="image5.jpeg" class="img-fluid" alt=""></div>
+                    <div class="teampic"><img src="app/assets/images/image5.jpeg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                         <h4>Faculty Staff</h4>
                         <span> Professor</span> <!-- Corrected spelling here -->
@@ -133,7 +133,7 @@
     
     <div class="col-lg-6 mt-4">
         <div class="member d-flex align-items-start">
-            <div class="teampic"><img src="Anish.jpg" class="img-fluid" alt=""></div>
+            <div class="teampic"><img src="app/assets/images/Anish.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
                 <h4>Anish Kumbhar</h4>
                 <span>B.Tech, 2025</span> <!-- Corrected spelling here -->
@@ -157,7 +157,7 @@
 <div class="row">
             <div class="col-lg-6 mt-4">
                 <div class="member d-flex align-items-start">
-                    <div class="teampic"><img src="Megha_final.jpg" class="img-fluid" alt=""></div>
+                    <div class="teampic"><img src="app/assets/images/Megha_final.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                         <h4>Megha Arya</h4>
                         <span>B.Tech, 2026 </span> 
@@ -172,7 +172,7 @@
 
             <div class="col-lg-6 mt-4">
                 <div class="member d-flex align-items-start">
-                    <div class="teampic"><img src="Poorva_final.jpg" class="img-fluid" alt=""></div>
+                    <div class="teampic"><img src="app/assets/images/Poorva_final.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                         <h4>Bhagwat Poorva Milind </h4>
                         <span>B.Tech, 2026</span> <!-- Corrected spelling here -->
@@ -187,7 +187,7 @@
 
             <div class="col-lg-6 mt-4">
                 <div class="member d-flex align-items-start">
-                    <div class="teampic"><img src="Reema.jpg" class="img-fluid" alt=""></div>
+                    <div class="teampic"><img src="app/assets/images/Reema_final.jpg" class="img-fluid" alt=""></div>
                     <div class="member-info">
                         <h4>Reema Murthy</h4>
                         <span>B.Tech, 2026</span> <!-- Corrected spelling here -->
@@ -216,7 +216,7 @@
 
       <div class="col-lg-6 mt-4">
         <div class="member d-flex align-items-start">
-            <div class="teampic"><img src="Ansh.jpg" class="img-fluid" alt=""></div>
+            <div class="teampic"><img src="app/assets/images/Ansh.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
                 <h4>Ansh Malhotra</h4>
                 <span>B.Tech, 2026</span> 
@@ -232,7 +232,7 @@
     
     <div class="col-lg-6 mt-4">
         <div class="member d-flex align-items-start">
-            <div class="teampic"><img src="Chirag.jpg" class="img-fluid" alt=""></div>
+            <div class="teampic"><img src="app/assets/images/Chirag.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
                 <h4>Chirag S</h4>
                 <span>B.Tech, 2026</span> 
@@ -246,7 +246,7 @@
     
     <div class="col-lg-6 mt-4">
         <div class="member d-flex align-items-start">
-            <div class="teampic"><img src="Rishabh.jpg" class="img-fluid" alt=""></div>
+            <div class="teampic"><img src="app/assets/images/Rishabh.jpg" class="img-fluid" alt=""></div>
             <div class="member-info">
                 <h4>Rishabh Mahor</h4>
                 <span>B.Tech, 2026</span> 
