--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -11,43 +11,58 @@
   }
 
   #advanced-search-btn {
-    background-color: #198754; /* Green color */
+    background-color: #198754;
     color: white;
     border: none;
     padding: 10px 20px;
-    margin-top :8%;
+    margin-top: 8%;
     margin-bottom: 10px;
     cursor: pointer;
   }
 </style>
 
 <%= form_for_filterrific @filterrific, { class: 'filterrific-form', id: 'submission' } do |f| %>
-  <div class="row g-3" >
+  <div class="row g-3">
     <!-- Name Field -->
     <div class="col-md-4 col-sm-12" style="margin: 30px 0px 0px;">
-      
-      <%= f.text_field :search_query, placeholder: "Search Name", class: "form-control", id: "filterrific_submit_button"  %>
+      <%= f.text_field :search_query, placeholder: "Search Name", class: "form-control", id: "filterrific_submit_button" %>
     </div>
 
-    
-
-    <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style= "margin: 30px 0px 24px 0px; display:none;">
-      
+    <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style="margin: 30px 0px 24px 0px; display:none;">
       <%= f.select :with_department_id_advanced, [['All sections', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
-    </div>
-
-    <!-- Advanced Search Button -->
-    <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px; !important">
-      <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px ;">Advanced Search</button>
     </div>
 
 
     <!-- Search Button -->
-    <div class="col-md-1  col-sm-12" style="margin:30px 0px 0px">
+    <div class="col-md-1 col-sm-12" style="margin:30px 0px 0px">
       <%= f.submit "Search", class: "btn btn-success" %>
     </div>
+  
 
-  </div>
+    <!-- Advanced Search Button -->
+    <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px !important">
+      <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px;">Advanced Search</button>
+    </div>
+
+
+    <!-- Reset Filters Button -->
+    <div class="col-md-1 col-sm-12" style="margin: 30px 0px 0px;">
+      <%= f.submit "Reset", class: "btn btn-success", id: "reset-filters-btn" %>
+    </div>
+
+    <!-- Advanced Search fields -->
+    <div class="col-md-4 col-sm-6" id="filterrific_search_designation" style= "display:none;">
+      <%= f.label :search_designation_advanced, "Search By Designation", class: "form-label", style: "color:white;" %>
+      <%= f.text_field :search_designation_advanced, class: "form-control" %>
+    </div>
+
+    <div class="col-md-4 col-sm-6" id="filterrific_sub_directory_id" style= "display:none;">
+      <%= f.label :sub_directory_id_advanced, "Search By Sub-Department", class: "form-label", style: "color:white;" %>
+      <%= f.select :sub_directory_id_advanced, [['All Sub-Departments', nil]] + @filterrific.select_options[:sub_directory_id], { style: 'text-decoration: none;' }, class: "form-select" %>
+    </div>
+
+    </div>
+
 <% end %>
 
 <script>
@@ -58,6 +73,17 @@
       toggleVisibility('filterrific_with_department_id');
       toggleVisibility('filterrific_search_designation');
       toggleVisibility('filterrific_sub_directory_id');
+    });
+
+    // Add a click event listener to the Reset Filters button
+    document.getElementById('reset-filters-btn').addEventListener('click', function () {
+      // Reset all the filters by clearing the form fields
+      document.getElementById('filterrific_submit_button').value = '';
+      document.getElementById('filterrific_with_department_id_advanced').value = '';
+      document.getElementById('filterrific_sub_directory_id_advanced').value = '';
+
+      // Optionally, you can submit the form after clearing the fields
+      document.getElementById('submission').submit();
     });
   });
 
