remove designation and department

--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -39,8 +39,8 @@
 
     <!-- Advanced Search Button -->
     <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px !important">
-      <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px;">Advanced Search</button>
-    </div>
+    <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px;">Advanced Search</button>
+        </div>
 
     <!-- Reset Filters Button -->
     <div class="col-md-1 col-sm-12" id="reset-filters-btn-container" style="margin: 30px 0px 0px; display: none;">
@@ -66,8 +66,8 @@
     document.getElementById('advanced-search-btn').addEventListener('click', function () {
       // Toggle the visibility of the Advanced Search Fields
       toggleVisibility('filterrific_with_department_id');
-      toggleVisibility('filterrific_search_designation');
-      toggleVisibility('filterrific_sub_directory_id');
+      //toggleVisibility('filterrific_search_designation');
+      //toggleVisibility('filterrific_sub_directory_id');
       updateResetButtonVisibility();
     });
 
