--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -224,7 +224,7 @@
           <div class="section-title">
             <h3>Staff</h3>
           
-          <div class="underline2"></div>
+          <div class="underline"></div>
           </div>
           
           <div class="row">
