--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -44,7 +44,7 @@
 
     <!-- Reset Filters Button -->
     <div class="col-md-1 col-sm-12" id="reset-filters-btn-container" style="margin: 30px 0px 0px; display: none;">
-      <%= f.submit "Reset", class: "btn btn-success", id: "reset-filters-btn" %>
+      <%= f.submit "Home", class: "btn btn-success", id: "reset-filters-btn" %>
     </div>
 
     <!-- Advanced Search fields -->
