--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -96,7 +96,7 @@
               <td style="width:0.7%; "> <%= index + 1 %> </td>
               <td style="width:5%; text-align: left;"> <%= faculty.name %> </td>
               
-              <td style="width:2%;"> <%= faculty.designation.title %> </td>
+              <td style="width:2%;"> <%= faculty.department.name %> </td>
               <td style="width:2%;"> <%= faculty.landline_office %> </td>
               <td style="width:1%; text-align: center;">
                 <!-- Button to trigger Bootstrap modal -->
